--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -119,7 +119,11 @@
     <!-- Data table plugin-->
     <script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
-    <script type="text/javascript">$('#sampleTable').DataTable();</script>
+    <script type="text/javascript">
+        $('#sampleTable').DataTable();
+        $('#sampleTable01').DataTable();
+        $('#sampleTable02').DataTable();
+    </script>
     <script type="text/javascript">
         var data = {
             labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6"],
