--- a/Test02/Views/KeToan/QLDonChoGiao.cshtml
+++ b/Test02/Views/KeToan/QLDonChoGiao.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 @{
-    ViewBag.Title = "Đơn hàng ";
+    ViewBag.Title = "Đơn hàng chờ giao";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.qlhd = "active";
-    ViewBag.nd = "Danh sách đơn hàng chờ duyệt ";
+    ViewBag.nd = "Danh sách đơn hàng chờ giao";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
- 
+    List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 
 }
 
@@ -14,18 +14,19 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#donduyet">Đơn duyệt</a>
+            <a class="nav-link " aria-current="page" href="/KeToan/QLDonHang">Đơn duyệt</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/KeToan/QLDonChoGiao">Đơn chờ giao</a>
+            <a class="nav-link active" href="#">Đơn chờ giao</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link"  href="/KeToan/QLDonDaGiao">Đơn đã giao</a>
+            <a class="nav-link" href="/KeToan/QLDonDaGiao">Đơn đã giao</a>
         </li>
     </ul>
 
     <!-- Tab panes -->
     <div class="tab-content">
+
         <div>
             <div class="row">
                 <div class="col-md-12">
@@ -37,7 +38,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-10">
-                                @using (Html.BeginForm("QLDonHang", "KeToan", FormMethod.Post, new { @clas = "" }))
+                                @using (Html.BeginForm("QLDonChoGiao", "KeToan", FormMethod.Post, new { @clas = "" }))
                                 {
                                     <div class="row">
                                         <div class="col-sm-2">
@@ -62,8 +63,8 @@
                                             <tr role="row">
                                                 <th class="sorting" tabindex="0" aria-controls="sampleTable">Mã đơn hàng</th>
                                                 <th class="sorting" tabindex="0" aria-controls="sampleTable">Đại lý</th>
-                                                <th tabindex="0" aria-controls="sampleTable">Điểm điểm giao</th>
-                                                <th tabindex="0" aria-controls="sampleTable">Tình trạng thanh toán</th>
+                                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Điểm điểm giao</th>
+                                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Tình trạng thanh toán</th>
                                                 <th class="sorting" tabindex="0" aria-controls="sampleTable">Ngày lập đơn</th>
                                                 <th class="sorting" tabindex="0" aria-controls="sampleTable">Tổng tiền</th>
                                                 <th class="sorting" tabindex="0" aria-controls="sampleTable">Xuất hóa đơn</th>
@@ -75,7 +76,7 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                                if (item.TinhTrangGH == null)
+                                                if (item.TinhTrangGH == "Chờ giao")
                                                 {
                                                     <tr style="text-align:center">
                                                         <td>
@@ -150,24 +151,24 @@
                 </div>
             </div>
         </div>
-      
-                </div>
-            </div>
 
-            <script>
-                //In dữ liệu
-                function printDiv(divName) {
-                    var printContents = document.getElementById(divName).innerHTML;
-                    var originalContents = document.body.innerHTML;
+    </div>
+</div>
 
-                    document.body.innerHTML = printContents;
+<script>
+    //In dữ liệu
+    function printDiv(divName) {
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
 
-                    window.print();
+        document.body.innerHTML = printContents;
 
-                    document.body.innerHTML = originalContents;
+        window.print();
 
-                }
-            </script>
-         
+        document.body.innerHTML = originalContents;
+
+    }
+</script>
+
 
 
