--- a/Test02/Views/KhachHang/DeleteDH.cshtml
+++ b/Test02/Views/KhachHang/DeleteDH.cshtml
@@ -64,7 +64,7 @@
                                 <input type="submit" value="Vẫn xóa" class="btn btn-danger" /> |
                                 <a class="btn btn-success" href="/KhachHang/DonHangDL" title="Thêm">
                                     <i class="fas fa-retweet"></i>
-                                    Trở lại danh sách kho
+                                    Trở lại danh sách đơn hàng
                                 </a>
                             </div>
                         }
