--- a/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
+++ b/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
@@ -9,14 +9,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <!-- Main CSS-->
     <link rel="stylesheet" href="~/Content/Test01/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!-- Font-icon css-->
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
@@ -31,12 +29,9 @@
            aria-label="Hide Sidebar"></a>
         <!-- Navbar Right Menu-->
         <ul class="app-nav">
-
-
             <!-- User Menu-->
             <li>
                 <a class="app-nav__item" href="@Url.Action("Logout", "LoginDL")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
-
             </li>
         </ul>
     </header>
@@ -76,34 +71,28 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.gh" href="~/KhachHang/GioHangDL">
-                    <i class='app-menu__icon bx bxs-package'></i>
+                    <i class="app-menu__icon bx bx-cart-add"></i>
                     <span class="app-menu__label">Đặt hàng</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.dhdl" href="~/KhachHang/DonHangDL">
-                    <i class='app-menu__icon bx bx-id-card'></i>
-                    <span class="app-menu__label">Chi tiết đơn hàng</span>
+                    <i class='app-menu__icon bx bxs-package'></i>
+                    <span class="app-menu__label">Đơn hàng</span>
                 </a>
             </li>
-
-            @*<li><a class="app-menu__item" href="table-data-product.html"><i
-                      class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span></a>
-                </li>
-                <li><a class="app-menu__item" href="table-data-oder.html"><i class='app-menu__icon bx bx-task'></i><span
-                      class="app-menu__label">Quản lý đơn hàng</span></a></li>
-                <li><a class="app-menu__item" href="table-data-banned.html"><i class='app-menu__icon bx bx-run'></i><span
-                      class="app-menu__label">Quản lý nội bộ
-                    </span></a></li>
-                <li><a class="app-menu__item" href="table-data-money.html"><i class='app-menu__icon bx bx-dollar'></i><span
-                      class="app-menu__label">Bảng kê lương</span></a></li>
-                <li><a class="app-menu__item" href="quan-ly-bao-cao.html"><i
-                      class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo doanh thu</span></a>
-                </li>
-                <li><a class="app-menu__item" href="page-calendar.html"><i class='app-menu__icon bx bx-calendar-check'></i><span
-                      class="app-menu__label">Lịch công tác </span></a></li>
-                <li><a class="app-menu__item" href="#"><i class='app-menu__icon bx bx-cog'></i><span class="app-menu__label">Cài
-                      đặt hệ thống</span></a></li>*@
+            <li>
+                <a class="app-menu__item @ViewBag.cn" href="~/KhachHang/CongNo">
+                    <i class="app-menu__icon bx bx-money-withdraw"></i>
+                    <span class="app-menu__label">Công nợ</span>
+                </a>
+            </li>
+            <li>
+                <a class="app-menu__item @ViewBag.lh" href="~/KhachHang/LienHe">
+                    <i class="app-menu__icon bx bxs-message-dots"></i>
+                    <span class="app-menu__label">Liên hệ</span>
+                </a>
+            </li>
         </ul>
     </aside>
     <main class="app-content">
@@ -128,26 +117,25 @@
             @RenderBody()
         </div>
     </main>
-    <!-- Essential javascripts for application to work-->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    @*Tìm kiếm*@
+    <script src="~/Scripts/plugin/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/plugin/dataTables.bootstrap.min.js"></script>
+
+    <script src="~/Content/js/jquery-3.2.1.min.js"></script>
+    <script src="~/Content/js/popper.min.js"></script>
+    <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
     <script src="src/jquery.table2excel.js"></script>
-
-    <script src="js/main.js"></script>
+    <script src="~/Content/js/main.js"></script>
     <!-- The javascript plugin to display page loading on top-->
-    <script src="js/plugins/pace.min.js"></script>
+    <script src="~/Content/js/plugins/pace.min.js"></script>
     <!-- Page specific javascripts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
     <!-- Data table plugin-->
-
-    <script type="text/javascript" src="js/plugins/jquery.dataTables.min.js"></script>
-
-    <script type="text/javascript" src="js/plugins/dataTables.bootstrap.min.js"></script>
-
+    <script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
     <script type="text/javascript">$('#sampleTable').DataTable();</script>
 
     <script>
@@ -263,7 +251,7 @@
             $("#ModalUP").modal({ backdrop: false, keyboard: false })
         });
     </script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    @RenderSection("script", false)
 </body>
 
 </html>
