--- a/Test02/Views/KhachHang/PageSanPham.cshtml
+++ b/Test02/Views/KhachHang/PageSanPham.cshtml
@@ -44,78 +44,53 @@
     <div class="col-md-12">
         <div class="tile">
             <h3 class="tile-title">DANH SÁCH SẢN PHẨM</h3>
-            <div class="tile-body">
+            <div class="tile-body table-responsive">
                 <div class="row">
                     @foreach (var item in Model)
                     {
-                        <div style="margin:10px;">
+                        <div style="padding: 10px;">
                             <div class="widget-small primary coloured-icon">
                                 <a href="/KhachHang/ChiTietSP/@item.MaSP">
-                                    @if (item.MaSP == "SP71")
-                                    {
-                                        <img src="~/Content/Img/SanPham/stingVang.jpg" style="height: 100px ; width: 100px;" alt="">
-                                    }
-                                    else if (item.MaSP == "SP84")
-                                    {
-                                        <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
-                                    }
-                                    else if (item.MaSP == "SP13")
-                                    {
-                                        <img src="~/Content/Img/SanPham/pepsi.jpg" style="height: 100px ; width: 100px;" alt="">
-                                    }
-                                    else if (item.MaSP == "SP15")
-                                    {
-                                        <img src="~/Content/Img/SanPham/coca.png" style="height: 100px ; width: 100px;" alt="">
-                                    }
-                                    else if (item.MaSP == "SP55")
-                                    {
-                                        <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
-                                    }
-                                    else
-                                    {
-                                        <img src="~/Content/Img/SanPham/traolong.png" style="height: 100px ; width: 100px;" alt="">
-                                    }
+                                    <img src="@item.HinhAnh" style="height: 100px ; width: 100px;" alt="">
                                 </a>
-                                <div class="info">
+                                <div class="info" style="width: 360px;">
                                     <h4>@Html.DisplayFor(modelItem => item.TenSP)</h4>
-                                    <p><b>HSD: <b>@{var ngay = string.Format("{0:dd/MM/yyyy}", item.HanSD);} @Html.DisplayFor(modelItem => ngay)</b></b></p>
+                                    @*<p><b>HSD: <b>@{var ngay = string.Format("{0:dd/MM/yyyy}", item.HanSD);} @Html.DisplayFor(modelItem => ngay)</b></b></p>*@
                                     <p><b>Mã sản phẩm: <b>@Html.DisplayFor(modelItem => item.MaSP)</b></b></p>
                                     <p>
                                         <b>
                                             Giá:
-                                            <b>@{var gia = string.Format("{0:0,0 VNĐ}", item.Gia);} @Html.DisplayFor(modelItem => gia)</b>
+                                            <b>@{var gia = string.Format("{0:0,0 VNĐ}", item.Gia);} @Html.DisplayFor(modelItem => gia) <span>/</span> @Html.DisplayFor(modelItem => item.DonViTinh)</b>
                                         </b>
                                     </p>
-                                    <p><b></b></p>
                                     <p>
-                                        <span class="badge bg-info">
-                                            Số lượng còn lại: @item.TongTon <span>/</span>
-                                            @Html.DisplayFor(modelItem => item.DonViTinh)
+                                        <span class="badge bg-info" style="margin: 5px 0px 5px 0px;">
+                                            Số lượng còn lại: @item.TongTon 
                                         </span>
-                                        <span>
+                                        <span  style="margin: 5px 0px 5px 0px;">
                                             @*<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-                                                Thêm
-                                            </button>*@
-                                            <a class="badge bg-info" href="/KhachHang/ThemVaoGH/@item.MaSP">Thêm</a>
+                                                    Thêm
+                                                </button>*@
+                                            <a class="badge bg-danger" href="/KhachHang/ThemVaoGH/@item.MaSP">Mua</a>
                                         </span>
 
                                         @*<div class="modal" id="myModal">
-                                            <div class="modal-dialog">
-                                                <div class="modal-content">
-                                                    <div class="modal-body" style="margin-top: 20px">
-                                                        <h4>Bạn có muốn thêm sản phẩm @item.MaSP này vào giỏ hàng không?</h4>
-                                                        <label style="margin-top: 20px;">Số lượng cần mua</label>
-                                                        <input type="number" placeholder="Nhập số lượng sản phẩm" style="width: 335px; height: 40px; margin-left: 10px; border-radius: 5px;" />
-                                                    </div>
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                        <div class="modal-body" style="margin-top: 20px">
+                                                            <h4>Bạn có muốn thêm sản phẩm @item.MaSP này vào giỏ hàng không?</h4>
+                                                            <label style="margin-top: 20px;">Số lượng cần mua</label>
+                                                            <input type="number" placeholder="Nhập số lượng sản phẩm" style="width: 335px; height: 40px; margin-left: 10px; border-radius: 5px;" />
+                                                        </div>
 
-                                                    <div class="modal-footer" style="margin-top: 20px;">
-                                                        <button type="button" class="btn btn-close" data-bs-dismiss="modal">Hủy</button>
-                                                        <button type="submit" class="btn btn-danger" data-bs-dismiss="modal"><a href="/KhachHang/ThemVaoGH/@item.MaSP">Thêm</a></button>
-                                                        
+                                                        <div class="modal-footer" style="margin-top: 20px;">
+                                                            <button type="button" class="btn btn-close" data-bs-dismiss="modal">Hủy</button>
+                                                            <button type="submit" class="btn btn-danger" data-bs-dismiss="modal"><a href="/KhachHang/ThemVaoGH/@item.MaSP">Thêm</a></button>
+
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </div>*@
+                                            </div>*@
                                     </p><br />
                                 </div>
                             </div>
