--- a/Test02/Views/QTV/Layout/LayoutQTV.cshtml
+++ b/Test02/Views/QTV/Layout/LayoutQTV.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 
 <html>
 <head>
@@ -47,57 +47,62 @@
                         @{
                             var user = (Test02.Models.NhanVien)HttpContext.Current.Session["user"];
                             @user.TenNV}
-                </b>
-            </p>
-            <p class="app-sidebar__user-designation">Chào mừng bạn trở lại</p>
-        </div>
-    </div>
-    <hr>
-    <ul class="app-menu">
-        <li>
-            <a class="app-menu__item haha" href="#">
-                <i class='app-menu__icon bx bx-cart-alt'></i>
-                <span class="">QUẢN TRỊ VIÊN </span>
-            </a>
-        </li>
-        <li>
-            <a class="app-menu__item @ViewBag.qtnv" href="~/QTV/QLNhanvien">
-                <i class='app-menu__icon bx bx-tachometer'></i>
-                <span class="app-menu__label">Quản lý nhân viên</span>
-            </a>
-        </li>
-        
-    </ul>
-</aside>
-<main class="app-content">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="app-title">
-                <ul class="app-breadcrumb breadcrumb">
-                    <li class="breadcrumb-item"><a href="#"><b>@ViewBag.nd</b></a></li>
-                </ul>
-                <div id="clock"></div>
+                    </b>
+                </p>
+                <p class="app-sidebar__user-designation">Chào mừng bạn trở lại</p>
             </div>
         </div>
-    </div>
-    <div>
-        @RenderBody()
-    </div>
-</main>
-<script src="js/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-<script src="js/popper.min.js"></script>
-<script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-<!--===============================================================================================-->
-<script src="js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-<script src="js/main.js"></script>
-<!--===============================================================================================-->
-<script src="js/plugins/pace.min.js"></script>
-<!--===============================================================================================-->
-<script type="text/javascript" src="js/plugins/chart.js"></script>
-<!--===============================================================================================-->
-<script type="text/javascript">
+        <hr>
+        <ul class="app-menu">
+            <li>
+                <a class="app-menu__item haha" href="#">
+                    <i class='app-menu__icon bx bx-cart-alt'></i>
+                    <span class="">QUẢN TRỊ VIÊN </span>
+                </a>
+            </li>
+            <li>
+                <a class="app-menu__item @ViewBag.qtnv" href="~/QTV/QLNhanvien">
+                    <i class='app-menu__icon bx bx-tachometer'></i>
+                    <span class="app-menu__label">Quản lý nhân viên</span>
+                </a>
+            </li>
+
+        </ul>
+    </aside>
+    <main class="app-content">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="app-title">
+                    <ul class="app-breadcrumb breadcrumb">
+                        <li class="breadcrumb-item"><a href="#"><b>@ViewBag.nd</b></a></li>
+                    </ul>
+                    <div id="clock"></div>
+                </div>
+            </div>
+        </div>
+        <div>
+            @RenderBody()
+        </div>
+    </main>
+    <script src="~/Content/js/jquery-3.2.1.min.js"></script>
+    <script src="~/Content/js/popper.min.js"></script>
+    <script src="~/Content/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="src/jquery.table2excel.js"></script>
+    <script src="~/Content/js/main.js"></script>
+    <!-- The javascript plugin to display page loading on top-->
+    <script src="~/Content/js/plugins/pace.min.js"></script>
+    <!-- Page specific javascripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    <!-- Data table plugin-->
+    <script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
+    <script type="text/javascript">$('#sampleTable').DataTable();</script>
+
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!--===============================================================================================-->
+    <script type="text/javascript">
         var data = {
             labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6"],
             datasets: [{
@@ -127,8 +132,8 @@
 
         var ctxb = $("#barChartDemo").get(0).getContext("2d");
         var barChart = new Chart(ctxb).Bar(data);
-</script>
-<script type="text/javascript">
+    </script>
+    <script type="text/javascript">
         //Thời Gian
         function time() {
             var today = new Date();
@@ -169,6 +174,6 @@
                 return i;
             }
         }
-</script>
+    </script>
 </body>
 </html>
